--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,6 @@ body {
 }
 
 .bookMenu {
- 
     background-color: #1f2223;
     flex-basis: 63%;
     padding: 2%;
@@ -49,7 +48,7 @@ h2 {
     font-weight: lighter;
 }
 
-button {
+#add {
     align-self: center;
     margin-top: 3vh;
     padding: 5px;
@@ -62,9 +61,27 @@ button {
     border-radius: 5px;
 }
 
-button:hover {
+#add:hover {
     background-color: #e8e6e3;
     color: #181a1b;
+}
+
+button {
+    align-self: center;
+    margin-top: 9px;
+    padding: 4px;
+    color:  #181a1b;
+    background-color:#e8e6e3 ;
+    border-style: solid;
+    font-size: 14px;
+    font-weight: lighter;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color:  #181a1b ;
+    color: #e8e6e3;
 }
 
 input, select {
@@ -79,4 +96,22 @@ input, select {
 input:hover {
     background-color: #e8e6e3;
     color: #181a1b;
+}
+
+.book {
+    background: rgb(195,69,34);
+    background: linear-gradient(45deg, rgba(195,69,34,1) 0%, rgba(253,187,45,1) 100%);
+    width: 150px;
+    height: 170px;
+    text-align: center;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.books{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
