delet and read buttons working, input validation bugs fixed, saving and prototype to do

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,4 +137,14 @@ input:hover {
     margin: 5px;
 }
 
+.readBook {
+    background:gray;
+    width: 150px;
+    text-align: center;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px;
+ }
 
